@@ -182,6 +182,7 @@ source "package/netkitbase/Config.in"
 source "package/netkittelnet/Config.in"
 source "package/netplug/Config.in"
 source "package/netsnmp/Config.in"
+source "package/netstat-nat/Config.in"
 source "package/nfs-utils/Config.in"
 source "package/ntp/Config.in"
 source "package/olsr/Config.in"
